--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <!--Fim Menu-->
 
     <!--Modal cart-->
-    <div class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden">
+    <div class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden" id="cart-modal">
         <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
             <h2 class="text-center font-bold text-2xl mb-2">Meu Carrinho</h2>
 
@@ -192,5 +192,7 @@
         </button>
     </footer>
     <!--Fim Button card footer-->
+
+    <script src="script.js"></script>
 </body>
 </html>
