--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!--META TAGS DE OG-OPEN GRAFIC-->
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Dev Burger - O Melhor hanburguer da cidade"/>
+    <meta property="og:image" content="https://cardapio-online-weld.vercel.app/assets/img/hamb-1.png"/>
+    <meta property="og:description" content="O melhor hamburguer artesanal da cidade é com a Dev Burger"/>
+    <meta property="og:site_name" content="DevBurger"/>
+
+
     <link rel="stylesheet" href="./styles/output.css" />
     
     <title>Cardápio Online</title>
